# play-pgvector

./: .env.example  .gitignore  README.md  cspell.config.yaml  docker-compose.yaml  pyproject.toml
cdk/: app.ts
src/: app.py  htmlTemplates.py
