[project]
name = "play-pgvector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yamatatsu", email = "the.kinnikuman@gmail.com" }
]
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.42.0",
    "boto3-stubs>=1.35.90",
    "boto3>=1.35.89",
    "botocore>=1.35.89",
    "chainlit>=1.3.2",
    "langchain-aws<=0.2.1",
    "langchain-community>=0.3.13",
    "langchain-postgres>=0.0.12",
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "pgvector<0.3.0",
    "psycopg[binary,pool]>=3.2.3",
    "psycopg2-binary>=2.9.10",
    # see, https://github.com/Chainlit/chainlit/issues/1544
    "pydantic<2.10.2",
    "python-dotenv>=1.0.1",
    "types-psycopg2>=2.9.21.20241019",
    "urllib3>=2.3.0",
    "watchdog>=6.0.0",
    "greenlet>=3.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.scripts]
play_pgvector = "chainlit run src/app.py -w"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/play_pgvector"]
